ccache news
===========

Unreleased 3.4
--------------

New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The compiler option form `--sysroot arg` is now handled like the documented
  `--sysroot=arg` form.


ccache 3.3.1
------------
Release date: 2016-09-07

Bug fixes
~~~~~~~~~

- Fixed a problem in the ``multiple `-arch` options'' support introduced in
  3.3. When using the direct mode (the default), different combinations of
  `-arch` options were not detected properly.

- Fixed an issue when compiler option `-Wp,-MT,path` is used instead of `-MT
  path` (and similar for `-MF`, `-MP` and `-MQ`) and `run_second_cpp`
  (`CCACHE_CPP2`) is enabled.


ccache 3.3
----------
Release date: 2016-08-27

Notes
~~~~~

- A C99-compatible compiler is now required to build ccache.


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The configuration option `run_second_cpp` (`CCACHE_CPP2`) now defaults to
  true. This improves ccache's out-of-the-box experience for compilers that
  can't compile their own preprocessed output with the same outcome as if they
  compiled the real source code directly, e.g. newer versions of GCC and Clang.

- The configuration option `hash_dir` (`CCACHE_HASHDIR`) now defaults to true.

- Added a new `ignore_headers_in_manifest` configuration option, which
  specifies headers that should be ignored in the direct mode.

- Added a new `prefix_command_cpp` (`CCACHE_PREFIX_CPP`) configuration option,
  which specifies one or several prefixes to add to the command line ccache
  uses when invoking the preprocessor.

- Added a new `limit_multiple` (`CCACHE_LIMIT_MULTIPLE`) configuration option,
  which specifies how much of the cache to remove when cleaning.

- Added a new `keep_comments_cpp` (`CCACHE_COMMENTS`) configuration option,
  which tells ccache not to discard the comments before hashing preprocessor
  output. This can be used to check documentation with *-Wdocumentation*.
