@@ -11,6 +11,14 @@ New features and improvements
   `--sysroot=arg` form.
 
 
+Bug fixes
+~~~~~~~~~
+
+- Fixed a regression in ccache 3.3 related to potentially bad content of
+  dependency files when compiling identical source code but with different
+  source paths.
+
+
 ccache 3.3.1
 ------------
 Release date: 2016-09-07
